--- a/client/src/components/Game/components/index.scss
+++ b/client/src/components/Game/components/index.scss
@@ -1,7 +1,5 @@
-@import './Navigation/index.scss';
-@import './Action/index.scss';
-@import './Action/Detail/index.scss';
-@import './Character/index.scss';
-@import './Character/Detail/index.scss';
-@import './Location/index.scss';
-@import './Location/Detail/index.scss';
+@import './CharacterSummary/index.scss';
+@import './LocationSummary/index.scss';
+@import './ListItems/index.scss';
+@import './ActionButton/index.scss';
+@import './GameCard/index.scss';
