I think I just did popup stuff...?

--- a/client/src/components/Game/components/index.scss
+++ b/client/src/components/Game/components/index.scss
@@ -3,3 +3,4 @@
 @import './ListItems/index.scss';
 @import './ActionButton/index.scss';
 @import './GameCard/index.scss';
+@import './EventPopup/index.scss';
