AWESOME! got location oriented messages working

--- a/client/src/components/Game/components/index.scss
+++ b/client/src/components/Game/components/index.scss
@@ -4,3 +4,4 @@
 @import './EventButton/index.scss';
 @import './GameCard/index.scss';
 @import './EventPopup/index.scss';
+@import './ChatInput/index.scss';
